<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/chat_send_createDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chat_send_date"
        style="@style/chat_date_style"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ly_chat_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/chat_send_icon"
                android:layout_width="49dp"
                android:layout_height="49dp"
                android:src="@drawable/my"/>

            <TextView
                android:id="@+id/chat_send_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:text="@string/chat_send_name"/>
        </LinearLayout>

        <TextView
            android:id="@+id/chat_send_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/ly_chat_icon"
            android:gravity="center_vertical"
            android:background="@drawable/chat_send_msg"
            android:lineSpacingExtra="2dp"
            android:minHeight="50dp"
            android:textSize="18sp"
            android:textColor="#000"
            android:text="@string/chat_send_content"
            android:clickable="true"
            android:focusable="true"/>
    </RelativeLayout>
</LinearLayout>