<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chat_bg_default">

    <RelativeLayout
        android:id="@+id/ly_chat_title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/title_bar">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/chat_title"
            android:textSize="20sp"
            android:textColor="#fff"
            android:textStyle="bold"
            android:gravity="center"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ly_chat_bottom"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/bottom_bar"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/id_chat_send"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/btn_send"
            android:textAllCaps="false"
            android:background="@drawable/chat_send_btn"/>

        <EditText
            android:id="@+id/id_chat_msg"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/id_chat_send"
            android:textSize="18sp"
            android:hint="@string/text_hint"
            android:singleLine="true"
            android:background="@drawable/login_edit_normal"/>
    </RelativeLayout>

    <ListView
        android:id="@+id/id_chat_listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/ly_chat_bottom"
        android:layout_below="@id/ly_chat_title"
        android:cacheColorHint="#0000"
        android:divider="@null"
        android:dividerHeight="5dp"
        android:scrollbarStyle="outsideOverlay"/>
</RelativeLayout>
